# GalaxyWizard

./: .gitignore  GalaxyWizard.py  LICENSE  README.md  build.py  build_scripts.py  main.spec  pyproject.toml
.github/workflows/: README.md  python-app.yml
doc/: README.txt  changelog.html  changelog.md  config-file-format.html  config-file-format.md  controls.html  controls.md  design-overview.html  design-overview.md  directory-structure.html  directory-structure.md  faq.html  faq.md  file-formats.html  file-formats.md  gameplay.html  gameplay.md  index.html  index.md  translation.html  translation.md
doc/maps/: index.html  index.md
src/: constants.py  fsm.py  log.py  main.py  resources.py  resources2.py  sound.py  translate.py  twistedmain.py  util.py
src/ai/: UnitAI.py
src/assets/locale/de/LC_MESSAGES/: GalaxyMage.po
src/data/core/abilities/: defend.py
src/data/core/text/: names-female.txt  names-male.txt  names-neuter.txt
src/data/core/textures/: COPYRIGHT.txt
src/engine/: Ability.py  Battle.py  Class.py  Effect.py  Equipment.py  Faction.py  Light.py  Map.py  MapGenerator.py  Name.py  Range.py  Scenario.py  Unit.py  netsupport.py
src/gui/: Camera.py  Clock.py  Cursor.py  GLUtil.py  Geometry.py  Input.py  MainWindow.py  MapEditorCursor.py  MapEditorGUI.py  MapEditorSprite.py  ScenarioChooser.py  ScenarioGUI.py  Sprite.py
src/test/: TestSuite.py
src/test/enginetests/: AbilityTest.py  BattleTest.py  MapTest.py  RangeTest.py  UnitTest.py
src/test/tests/: FSMTest.py  ResourcesTest.py
tests/: conftest.py  test_ai.py  test_battle.py  test_map.py  test_security.py  test_unit.py
