[tool.poetry]
name = "galaxywizard"
scripts = { "galaxywizard" = "src.main:main" }
version = "0.1.0"
description = "GalaxyWizard is an open-source tactical RPG written with python"
authors = ["jeremy jeanne <jyjeanne@gmail.com>"]
license = "GPL-2.0 license"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "==1.24.1"
PyOpenGL = "==3.1.7"
pygame = "^2.5.2"
Twisted = "^24.3.0"
PyOpenGL_accelerate = "==3.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"